--- a/app/templates/compras/lista.html
+++ b/app/templates/compras/lista.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <h1>Compras</h1>
+    <a href="/compras/importar-nota" class="btn btn-success mb-3">Importar Nota Fiscal (XML)</a>
     <table class="table table-striped">
         <thead>
             <tr><th>ID</th><th>Fornecedor</th><th>Valor</th><th></th></tr>
